test/e2e/features/directresponse/testdata/basic-delegation-direct-response.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: direct-response-parent
  namespace: kgateway-base
spec:
  hostnames:
  - "www.example.com"
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: "*"
      namespace: "httpbin"
      kind: HTTPRoute
      group: gateway.networking.k8s.io
  - matches:
    - path:
        type: Exact
        value: /parent
    filters:
    - type: ExtensionRef
      extensionRef:
        name: parent-dr
        group: gateway.kgateway.dev
        kind: DirectResponse
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: direct-response-child
  namespace: httpbin
  labels:
    app: direct-response
spec:
  rules:
  - matches:
    - path:
        type: Exact
        value: /headers
    backendRefs:
    - name: httpbin
      port: 8000
  - matches:
    - path:
        type: Exact
        value: /child
    filters:
    - type: ExtensionRef
      extensionRef:
        name: child-dr
        group: gateway.kgateway.dev
        kind: DirectResponse
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: DirectResponse
metadata:
  name: parent-dr
  namespace: kgateway-base
spec:
  status: 302
  body: "Hello from parent route"
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: DirectResponse
metadata:
  name: child-dr
  namespace: httpbin
spec:
  status: 302
  body: "Hello from child route"
