test/e2e/features/directresponse/testdata/body-format-text.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: direct-response
  namespace: httpbin
  labels:
    app: direct-response
spec:
  hostnames:
  - "www.example.com"
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 8000
  - matches:
    - path:
        type: Exact
        value: /robots.txt
    filters:
    - type: ExtensionRef
      extensionRef:
        name: robots-txt
        group: gateway.kgateway.dev
        kind: DirectResponse
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: DirectResponse
metadata:
  name: robots-txt
  namespace: httpbin
spec:
  status: 200
  bodyFormat:
    text: |
      User-agent: *
      Disallow: %REQ(:path)%
